more uri and functions

--- a/Zbang.Cloudents.Mvc2Jared/Views/Shared/_layoutPage.cshtml
+++ b/Zbang.Cloudents.Mvc2Jared/Views/Shared/_layoutPage.cshtml
@@ -10,10 +10,10 @@
 <body ng-app="app">
     <div class="container body-content" ng-controller="AppController as st">
         @RenderBody()
-        <hr />
-        <footer>
+        @*<hr />*@
+       @*<footer>
             <p>&copy; @DateTime.Now.Year - Yifat and Jared Application</p>
-        </footer>
+        </footer>*@
     </div>
     <script src="~/Scripts/jquery-2.2.4.min.js"></script>
     <script src="~/Scripts/angular/angular.min.js"></script>
