--- a/Zbang.Cloudents.Mvc2Jared/Content/Site.css
+++ b/Zbang.Cloudents.Mvc2Jared/Content/Site.css
@@ -31,7 +31,7 @@ input{
 input[name="university"] {
     border: none;   
     border-radius: 8px;  
-    margin-left: 35px;
+    margin-left: 40px;
     width:301px;
     height:32px;
 }
@@ -66,7 +66,7 @@ input[name="item name"] {
     border: none;   
     border-radius: 8px;  
     margin-right: 20px;  
-    margin-left: 35px;
+    margin-left: 40px;
     margin-top:15px;
     width:1120.1px;
     height:33px;
@@ -94,7 +94,7 @@ div0 {
 }
 
 input[name="isReviewed"]{
-    margin-left: 37px;
+    margin-left: 40px;
     margin-bottom:15px;
 }
 input[name="isSearchType"]{
@@ -106,14 +106,15 @@ input[name="isSearchType"]{
 
 
 button[name="img_btn"] {
-    margin-left: 35px;
-    height: 25px;
-    width:27px;
+    margin-left: 40px;
+    height: 22.2px;
+    width:24px;
     background: url('../images1/combined-shape.png') no-repeat;
+    border: none;
 }
 
 label[name="save_btn"] {
-    margin-left: 35px;
+    margin-left: 16px;
     width: 47px;
     height: 23px;
     font-family: .SFNSText;
@@ -162,3 +163,35 @@ select{
     width: 150px;
 }
 
+div1{
+  display: table;
+  width: 100%;
+  height: 40px;
+  align-content: center;
+}
+
+h3{
+  width: 165px;
+  height: 10px;
+  font-family: SFNSText;
+  font-size: 14px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: -0.3px;
+  color: #07305a;
+}
+
+
+
+        section {
+        float: left;
+        margin: 0 1.5%;
+        width: 63%;
+        }
+        aside {
+        float: right;
+        margin: 0 1.5%;
+        width: 30%;
+        }
