compllette read data for search Jared.

--- a/Zbang.Cloudents.Mvc2Jared/Views/Home/page.cshtml
+++ b/Zbang.Cloudents.Mvc2Jared/Views/Home/page.cshtml
@@ -165,14 +165,12 @@
         </div>
 
         <div id="right">
-            <img src="/images1/1.jpg" width="760" style="margin-top:36px">
+            <div class="preview preview-page">
+                <div class="preview-image" ng-repeat="s in st.documents">
+                    <img class="imageContent" src="{{s}}" alt="" />
+                </div>
+            </div>
         </div>
-
-
-
-
-
-    </div>
 
 
 
