--- a/Zbang.Cloudents.Mvc2Jared/Content/Site.css
+++ b/Zbang.Cloudents.Mvc2Jared/Content/Site.css
@@ -60,7 +60,8 @@ input[name="item name"] {
     margin-top:15px;
     height:33px;
     float:left;
-    margin-left:10px;
+    margin-left:25px;
+    margin-right:15px;
 }
 
 button[name="search_btn"] {
@@ -71,6 +72,7 @@ button[name="search_btn"] {
     height: 32px;
     border-radius: 8px;
     background-color: #3293f6;
+    margin-right:25px;
 }
 
 
@@ -192,3 +194,6 @@ h3{
         margin: 0 1.5%;
         width: 30%;
         }
+button[name="delete_btn"] {
+    background-image: url('../images1/shape.png');
+}
