--- a/Zbang.Cloudents.Mvc2Jared/Views/Home/page.cshtml
+++ b/Zbang.Cloudents.Mvc2Jared/Views/Home/page.cshtml
@@ -52,7 +52,7 @@
                 <div class="row">
                         <input class="col-10" placeholder="Item Name" name="item name"
                                ng-model="st.formData.name" />   
-                        <button class="col-2" name="search_btn" type="submit">
+                        <button class="col" name="search_btn"  ng-click="st.search()">
                             Search
                         </button>
                    
@@ -162,9 +162,12 @@
                   
                     <input style="margin-top:10px; margin-right:25px; margin-left:25px; border:double;"
                            name="ttt" placeholder={{t}}>
+
+                    <button name="delete_btn" ng-click="st.deleteTag()"></button>
                 </div>
                 <input style="margin-top:10px; margin-right:25px; margin-left:25px"
-                       name="ttt111" placeholder="Add new Tag">
+                       name="ttt111" placeholder="">
+
             </div>
 
         </div>
