--- a/Zbang.Cloudents.Mvc2Jared/Views/Home/page.cshtml
+++ b/Zbang.Cloudents.Mvc2Jared/Views/Home/page.cshtml
@@ -144,7 +144,7 @@
 
                 <select id="mySelect" ng-model="st.doc.TypeId" style="margin-left:40px;  margin-top:20px;">
                     <option value="" disabled selected>Search type</option>
-                    <option ng-repeat="option in st.optionalTabs" value="{{option.id}}">{{option.name}}</option>
+                    <option ng-repeat="option in st.optionalTabs" value="{{option.Id}}">{{option.Name}}</option>
                     @*<option value="Homework">Homework</option>
                     <option value="Lectures">Lectures</option>
                     <option value="Study Guides">Study Guides</option>
