start working on the save

--- a/Zbang.Cloudents.Mvc2Jared/Views/Home/page.cshtml
+++ b/Zbang.Cloudents.Mvc2Jared/Views/Home/page.cshtml
@@ -114,7 +114,7 @@
 
             <div  style="margin-left:60px;  margin-top:20px;">
                 Name:   <input id="myItemName" class="form-check-label" 
-                               style="margin-top:17px;"  type="text"
+                               style="margin-top:17px;"  type="text" ng-model="st.doc.ItemName"
                         value={{st.doc.ItemName}}>
                    
                 
