--- a/Zbang.Cloudents.Mvc2Jared/Views/Shared/_layoutPage.cshtml
+++ b/Zbang.Cloudents.Mvc2Jared/Views/Shared/_layoutPage.cshtml
@@ -8,7 +8,7 @@
     <link href="~/Content/bootstrap.css" rel="stylesheet" type="text/css" />
 </head>
 <body ng-app="app">
-    <div class="container body-content" ng-controller="AppController as st">
+    <div class="container-full body-content" ng-controller="AppController as st">
         @RenderBody()
         @*<hr />*@
        @*<footer>
