--- a/Zbang.Cloudents.Mvc2Jared/Content/Site.less
+++ b/Zbang.Cloudents.Mvc2Jared/Content/Site.less
@@ -109,22 +109,74 @@
         margin: 0;
         padding: 10px;
 
-        section {
-            padding: 20px 0;
+        .info {
+            section {
+                padding: 20px 0;
+
+                &:not(:last-child) {
+                    border-bottom: 3px solid black;
+                }
+
+                &.doc-type select {
+                    min-width: 220px;
+                    height: 38px;
+                    margin: 10px 0;
+                    border-radius: 8px;
+                    padding: 0 10px;
+                }
+
+                &.tags {
+                    .tag .name{
+                        border: 1px solid #979797;
+                        color: @darkBlue
+                    }
+                    input {
+                        border: 1px dashed #979797;
+                        background: @grey;
+                        color: #9b9b9b;
+                    }
+                    input, .tag .name{
+                        line-height: 32px;
+                        width: 100%;
+                        padding: 0 8px;
+                        border-radius: 8px;
+                    }
+
+                    .tag {
+                        position: relative;
+                        margin-bottom: 5px;
+
+                        .delete-tag {
+                            cursor: pointer;
+                            position: absolute;
+                            right: -20px;
+                            top: 0;
+                            bottom: 0;
+                            width: 20px;
+                            background: url(../images1/shape.png) no-repeat;
+                            background-position: 50% 50%;
+                            border: none;
+                        }
+                    }
+                }
+            }
+
+            h1 {
+                color: @darkBlue;
+                font-size: 14px;
+                margin-bottom: 20px;
+            }
+
+            .detail {
+                margin-bottom: 20px;
+                height: 28px;
+            }
         }
 
-        section:not(:last-child) {
-            border-bottom: 3px solid black;
-        }
-
-        h1 {
-            color: @darkBlue;
-            font-size: 14px;
-        }
-
-        .detail {
-            margin: 10px 0;
-            height: 28px;
+        .preview{
+            .preview-image img{
+                max-width: 100%;
+            }
         }
     }
 }
